<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daniel_catlett.tapp.ContactPage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textViewContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtContact"
            android:textColor="@color/simonBlack"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="19dp" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/descriptionSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7"
        app:srcCompat="@drawable/icon_settings" />

    <TextView
        android:id="@+id/textViewContactEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtContactEmail"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />

    <TextView
        android:id="@+id/textViewContactDaniel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtContactDaniel"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactEmail" />

    <TextView
        android:id="@+id/textViewContactSimon"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtContactSimon"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactDaniel" />

    <TextView
        android:id="@+id/textViewContactTeper"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtContactTeper"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewContactSimon" />

</android.support.constraint.ConstraintLayout>
