<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daniel_catlett.tapp.CreditsPage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCredits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txtCredits"
            android:textColor="@color/simonBlack"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="12dp" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/descriptionSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6"
        app:srcCompat="@drawable/icon_settings" />

    <TextView
        android:id="@+id/textCreditsDaniel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtCreditsDaniel"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar6" />

    <TextView
        android:id="@+id/textCreditsSimon"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtCreditsSimon"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCreditsDaniel" />

    <TextView
        android:id="@+id/textCreditsTeper"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/txtCreditsTeper"
        android:textAlignment="center"
        android:textColor="@color/simonBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCreditsSimon" />
</android.support.constraint.ConstraintLayout>

</ScrollView>
