<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.daniel_catlett.tapp.TournamentPage">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTournament"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textViewTournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/simonBlack"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="19dp" />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/scheduleButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="125dp"
        android:background="@color/simonRed"
        android:elevation="4dp"
        android:gravity="left|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/txtSchedule"
        android:textAllCaps="false"
        android:textColor="@color/simonBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTournament" />

    <Button
        android:id="@+id/eventsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:elevation="4dp"
        android:gravity="left|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/txtEvents"
        android:textAllCaps="false"
        android:textColor="@color/simonBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleButton" />

    <Button
        android:id="@+id/attendeesButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:elevation="4dp"
        android:gravity="left|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/txtAttendees"
        android:textAllCaps="false"
        android:textColor="@color/simonBlack"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventsButton" />

    <Button
        android:id="@+id/removeButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:elevation="4dp"
        android:gravity="left|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/txtRemove"
        android:textAllCaps="false"
        android:textColor="@color/simonBlack"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attendeesButton" />

    <Button
        android:id="@+id/downloadButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/simonRed"
        android:elevation="4dp"
        android:gravity="left|center_vertical"
        android:hapticFeedbackEnabled="true"
        android:padding="10dp"
        android:text="@string/txtDownload"
        android:textAllCaps="false"
        android:textColor="@color/simonBlack"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeButton" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="251dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="135dp"
        android:contentDescription="@string/descriptionBracket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTournament"
        app:srcCompat="@drawable/icon_bracket" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/simonBlack"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarTournament">

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/simonRed"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

    </android.support.v7.widget.Toolbar>


</android.support.constraint.ConstraintLayout>
